2016-06-13  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38653 + 38657: Doc/Zsh/builtins.yo, Src/exec.c,
	Test/E02xtrace.ztst: 'functions -T' tracing: recurse into
	anonymous functions.

	* 38651: Completion/Unix/Command/_git: Escape parameter arguments
	to _call_program.

	* 38665: Completion/Unix/Command/_git: config option completion:
	Quote properly.

2016-06-12  Barton E. Schaefer  <schaefer@zsh.org>

	* 38670: Doc/Zsh/contrib.yo, Functions/Zle/add-zle-hook-widget:
	New function for managing ZLE special widgets, modeled after
	Functions/Misc/add-zsh-hook.

2016-06-09  Oliver Kiddle  <opk@zsh.org>

	* 38579: Functions/Zle/bracketed-paste-magic: simplify saving
	and restoring of state

	* 38641: Completion/Base/Utility/_values: allow for values which
	resemble compadd options

	* 38639: Completion/Unix/Command/_su: fix username completion
	after -, update options and get user shell with getent

2016-06-07  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38624: Completion/Unix/Command/_git: Optimize the last commit's
	__git_recent_branches__names as suggested by Matthew.

	* 38592 (plus tweak): Completion/Unix/Command/_git: New recent
	branches completion, unused. (Joint with Nils Luxton)

2016-06-07  Barton E. Schaefer  <schaefer@zsh.org>

	* 38632: Completion/Linux/Command/_pkgtool: remove trailing space
	on #compdef line for compinit parsing

	* 38630: Src/builtin.c: fix infinite loop of "hash ="

2016-06-06  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 38610: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Extract a patch subject, 2.0.

	* 38609: Functions/VCS_Info/VCS_INFO_quilt: vcs_info quilt:
	Factor out a helper function. No functional change.

2016-06-05  Barton E. Schaefer  <schaefer@zsh.org>

	* 38622: Src/jobs.c: consistent handling of "--" in "kill" builtin

2016-06-04  Eric Cook <llua@gmx.com>

	* 38547: Completion/compdump: only autoload functions
	when they exist in fpath.

2016-06-04  Daniel Shahaf  <d.s@daniel.shahaf.name>
